libstdc++-v3/src/ios.cc
@@ -157,7 +157,11 @@ namespace std
   ios_base::Init::_S_ios_create(bool __sync)
   {
     int __out_size = __sync ? 0 : static_cast<int>(BUFSIZ);
-    int __in_size = __sync ? 1 : static_cast<int>(BUFSIZ);
+#ifdef _GLIBCPP_HAVE_ISATTY
+    int __in_size = (__sync || isatty (0)) ? 1 : static_cast<int>(BUFSIZ);
+#else
+    int __in_size = 1;
+#endif
 
     // NB: The file globals.cc creates the four standard files
     // with NULL buffers. At this point, we swap out the dummy NULL
